--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -20,3 +20,13 @@
     cursor: pointer;
     color: var(--primary-color-hover);
 }
+
+@media screen and (max-width: 450px) {
+    .container {
+        padding: 1.7rem 1.5rem;
+    }
+    .menuItem {
+        font-size: 1rem;
+        margin: 0 0.2rem;
+    }
+}
