--- a/src/components/InfoPanel/styles.module.css
+++ b/src/components/InfoPanel/styles.module.css
@@ -1,25 +1,23 @@
 .container {
   background-color: var(--primary-color);
   width: 80%;
-  height: 15.5rem;
+  height: 10rem;
   margin: 0 auto;
 
   position: relative;
   z-index: 1;
-  bottom: 7.75rem;
+  bottom: 5rem;
 }
 
 .content {
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 @media screen and (max-width: 800px){
     .container {
         width: 90%;
-        height: 18rem;
-        bottom: 9rem;
     }
 }
