--- a/src/components/InfoItem/styles.module.css
+++ b/src/components/InfoItem/styles.module.css
@@ -1,10 +1,8 @@
 .containerItem {
-    width: 13rem;
-    height: 13rem;
+    max-width: 22%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     /* border: 1px solid var(--background);
     border-radius: 1rem; */
     transition: 0.1s;
@@ -16,18 +14,35 @@
 }
 
 .icon {
-    font-size: 4rem;
+    font-size: 3rem;
     margin-bottom: 0.8rem;
     color: var(--background);
 }
 
 .title {
     color: var(--background);
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: bold;
 }
 
 .description {
     font-size: 0.9rem;
     font-weight: 300;
+    text-align: center;
+}
+
+@media screen and (max-width: 800px){
+    .title {
+        font-size: 1.1rem;
+    }
+    .icon {
+        font-size: 1.7rem;
+    }
+    .containerItem {
+        width: 12rem;
+    }
+
+    .description {
+        font-size: 0.8rem;
+    }
 }
