--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -19,11 +19,15 @@
 }
 
 .infoSection {
-  margin-top: 1rem;
+  margin: 2rem 0;
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 80vh;
-  margin-bottom: 1rem;
+}
+
+.infoImage {
+  position: relative;
+  object-fit: scale-down;
 }
 
 .logoArea {
@@ -37,7 +41,10 @@
 
 }
 
-.infoImage {
+@media screen and (max-width: 500px){
+  .infoSection {
+    height: 60vh;
+  }
 }
 
 @media screen and (max-width: 780px){
