--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,11 @@ body {
   overflow-x: hidden;
 }
 
+html {
+  --scroll-behavior: smooth!important;
+  scroll-behavior: smooth!important;
+}
+
 body {
   color: rgb(var(--primary-color));
   background: var(--background);
