fix: set colors and remove vars references

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,5 +1,5 @@
 .contentFooter {
-    color: var(--primary-color);
+    color: #243A6A;
     display: flex;
     flex-direction: column;
     align-items: center;
