--- a/src/components/InfoPanel/styles.module.css
+++ b/src/components/InfoPanel/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: var(--primary-color);
+  background-color: #243A6A;
   width: 80%;
   height: 10rem;
   margin: 0 auto;
