--- a/src/components/InfoItem/styles.module.css
+++ b/src/components/InfoItem/styles.module.css
@@ -16,11 +16,11 @@
 .icon {
     font-size: 3rem;
     margin-bottom: 0.8rem;
-    color: var(--background);
+    color: #E0ECF8;
 }
 
 .title {
-    color: var(--background);
+    color: #E0ECF8;
     font-size: 1.3rem;
     font-weight: bold;
 }
