--- a/src/components/Partners/styles.module.css
+++ b/src/components/Partners/styles.module.css
@@ -2,7 +2,7 @@
     margin-top: 2rem;
     padding-top: 1rem;
     padding-bottom: 2rem;
-    background-color: var(--primary-color);
+    background-color: #243A6A;
 }
 
 .title {
