--- a/src/components/SectionInverted/styles.module.css
+++ b/src/components/SectionInverted/styles.module.css
@@ -1,6 +1,6 @@
 .containerSection {
     width: 100%;
-    color: var(--primary-color);
+    color: #243A6A;
     display: flex;
     flex-direction: row;
     margin-top: 2rem;
